# fishmlserv

./: .gitignore  Dockerfile  MANIFEST.in  README.md  fly.toml  pyproject.toml  pyproject.toml.b  r.txt  requirements.txt  result_df.parquet
LB/: Dockerfile  default.conf
note/: .fish.py.swp  fish.ipynb  fish.py  fish_model_k1.pkl  fish_model_k25.pkl  r.ipynb  s.ipynb  s2-2.ipynb  s2.ipynb  ss.py
src/fishmlserv/: cli.py  curl.py  data.py  main.py  model.pkl
src/fishmlserv/model/: .manager.py.swp  fish_model_k15.pkl  fish_model_k49.pkl  fish_model_k5.pkl  manager.py
src/fishmlserv/rest/: get.py
tests/: test_all.py  test_curl.py  test_pred.py
