[project]
name = "fishmlserv"
version = "0.8.0"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "dMario24", email = "data.mario24@gmail.com"},
]
dependencies = [
]
requires-python = "==3.11.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
